--- a/css/calc.css
+++ b/css/calc.css
@@ -21,4 +21,21 @@ button {
     height: 45px;
     font-weight: bold;
     font-size: 14px;
+    margin-top: 2px;
+}
+
+.zero-number{
+    width: 104px;
+}
+
+#btnEqual{
+    position: absolute;
+    margin-left: 4px;
+    height: 90px;
+}
+
+.calculator{
+    margin: auto;
+    margin-top: 30px;
+    width: 250px;
 }
