--- a/css/calc.css
+++ b/css/calc.css
@@ -4,7 +4,7 @@
 }
 
 .results-text {
-    background-color: darkgrey;
+    background-color: khaki;
     width: 150px;
     height: 40px;
     font-family: digital;
@@ -17,25 +17,39 @@ button {
     border-radius: 5px;
     width: 50px;
     text-align: center;
-    background-color: orange;
+    background-color: #222;
     height: 45px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 2px;
+    color: white;
 }
 
-.zero-number{
-    width: 104px;
+.zero-number {
+    width: 160px;
 }
 
-#btnEqual{
-    position: absolute;
-    margin-left: 4px;
-    height: 90px;
-}
 
-.calculator{
+.calculator {
     margin: auto;
     margin-top: 30px;
-    width: 250px;
+    width: 261px;
+    background-color: gainsboro;
+    height: 300px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+    .calculator > div {
+        text-align: center;
+    }
+
+    .calculator:first-child {
+        padding-top: 15px;
+    }
+
+#btnReset {
+    background-color: red;
 }
