--- a/css/calc.css
+++ b/css/calc.css
@@ -35,7 +35,7 @@ button {
     margin-top: 30px;
     width: 261px;
     background-color: gainsboro;
-    height: 300px;
+    height: 315px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 5px;
@@ -46,9 +46,9 @@ button {
         text-align: center;
     }
 
-    .calculator:first-child {
-        padding-top: 15px;
-    }
+.div-results {
+    padding-top: 15px;
+}
 
 #btnReset {
     background-color: red;
